--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Save File Example</title>
+    <title>Text File Saver</title>
 </head>
 <body>
-    <textarea id="textarea" rows="10" cols="30"></textarea>
+    <h1>Text File Saver</h1>
+    <textarea id="textarea" rows="10" cols="30"></textarea><br>
     <button id="save-file">保存文件</button>
-
+    <button id="load-file">加载文件</button>
+    
     <script src="renderer.js"></script>
 </body>
 </html>
